--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "less-loader": "^5.0.0",
     "react": "^17.0.2",
     "react-app-rewired": "^2.1.8",
+    "react-cookies": "^0.1.1",
     "react-dom": "^17.0.2",
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.3",
