--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "customize-cra": "^1.0.0",
     "less": "^4.1.1",
     "less-loader": "^5.0.0",
+    "moment": "^2.29.1",
     "react": "^17.0.2",
     "react-app-rewired": "^2.1.8",
     "react-cookies": "^0.1.1",
